--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,11 @@
     th {
       background-color: #f4f4f4;
     }
+    button {
+      margin-top: 10px;
+      padding: 8px 12px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
@@ -37,6 +42,8 @@
 
   <!-- Container for showing parsed contacts -->
   <div id="tableContainer"></div>
+
+  <button id="sendMessagesBtn" disabled>Send Messages</button>
 
   <!-- Local libraries -->
   <script src="libs/papaparse.min.js"></script>
