--- a/popup.html
+++ b/popup.html
@@ -3,43 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WhatsBlitz - Upload Contacts</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-      max-width: 400px;
-    }
-    input[type="file"] {
-      margin-bottom: 15px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 6px;
-      text-align: left;
-    }
-    th {
-      background-color: #f4f4f4;
-    }
-    button {
-      margin-top: 10px;
-      padding: 8px 12px;
-      font-size: 16px;
-    }
-  </style>
+  <title>WhatsBlitz - Bulk WhatsApp Sender</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h2>Upload Contacts File</h2>
+  <h2>WhatsBlitz - Bulk WhatsApp Sender</h2>
+
   <input type="file" id="fileInput" accept=".csv, .xlsx" />
+  
   <div id="tableContainer"></div>
+
   <button id="sendMessagesBtn" disabled>Send Messages</button>
-  <script src="libs/papaparse.min.js"></script>
+  <button id="cancelBtn" disabled>Cancel</button>
+  <button id="downloadLogBtn" disabled>Download Log</button>
+
+  <div id="logStatus"></div>
+
   <script src="libs/xlsx.full.min.js"></script>
+  <script src="libs/papaparse.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
